# Robotics

./: .gitmodules
MRTP/: .gitmodules  README.md  generated_orchard.sdf  genmap.sh
MRTP/CSE180/lab4/: CMakeLists.txt  package.xml
MRTP/CSE180/lab4/src/: chaser.cpp
MRTP/CSE180/remap/: CMakeLists.txt  package.xml
MRTP/CSE180/remap/src/: remap.cpp
MRTP/CSE180/robctl/: CMakeLists.txt  package.xml
MRTP/CSE180/robctl/src/: controlturtlebot.cpp  turtlebotposesensor.cpp
MRTP/final/src/moverobo/: CMakeLists.txt  package.xml
MRTP/final/src/moverobo/src/: human_detector_node.cpp  moverobo.cpp
MRTP/generatemap/: CMakeLists.txt  create_test.py  generate_orchard  generate_orchard.cpp  generate_orchard.py  package.xml  process_orchard.py  trees.json
MRTP/generatemap/launch/: bringup_simulation.launch.py  full_pipeline.launch.py
MRTP/generatemap/src/: tcp_demux_node.cpp
MRTP/generatemap1/: generated_orchard.sdf  orchard_tcp.py
MRTP/lab5/src/tracking/: CMakeLists.txt  package.xml
MRTP/lab5/src/tracking/src/: publisher.cpp  trackdifferences.cpp
MRTP/lab6/src/oopsquare/: CMakeLists.txt  package.xml
MRTP/lab6/src/oopsquare/src/: oopsquare.cpp
MRTP/lab7/src/lab7/: CMakeLists.txt  package.xml
MRTP/lab7/src/lab7/src/: testnavigator.cpp
MRTP/my_robot_config/: robot.srdf  robot.urdf.xacro  robot.yaml
MRTP/my_robot_config/manipulators/config/: moveit.yaml
MRTP/my_robot_config/platform/config/: diagnostic_aggregator.yaml  diagnostic_updater.yaml
MRTP/my_robot_config/platform/launch/: platform-service.launch.py
MRTP/my_robot_config/sensors/launch/: camera_0.launch.py  lidar2d_0.launch.py  lidar3d_0.launch.py  sensors-service.launch.py
MRTP/src/amiga-ros2-bridge/amiga_ros2_behavior_tree/: CMakeLists.txt  package.xml
MRTP/src/amiga-ros2-bridge/amiga_ros2_behavior_tree/include/amiga_ros2_behavior_tree/actions/: move_to_relative_location.hpp
MRTP/src/amiga-ros2-bridge/amiga_ros2_behavior_tree/src/actions/: move_to_relative_location.cpp
MRTP/src/amiga-ros2-bridge/amiga_ros2_description/meshes/: front_right_wheel_link.STL  rear_left_wheel_link.STL
MRTP/src/amiga-ros2-bridge/amiga_ros2_description/urdf/: amiga_descr.urdf.xacro  base.urdf.xacro  bno085.urdf.xacro  gps.urdf.xacro  lidar.urdf.xacro  oak_d_w_poe.urdf.xacro  wheel.urdf.xacro
MRTP/src/examples/src/: geom.cpp
clearpath_gz/launch/: orchard_bringup.launch.py  simulation.launch.py
clearpath_gz/meshes/orchard/: orchard_tree_1.dae  orchard_tree_2.dae  orchard_tree_3.dae  orchard_tree_4.dae  orchard_tree_5.dae  orchard_tree_9.dae  orchard_world.dae  unit_leaves.dae  unit_trunk.dae
clearpath_gz/worlds/: 1generated_orchard.sdf  generated_orchard.sdf
docker/: Dockerfile
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/clearpath_generator_gz/share/ament_index/resource_index/package_run_dependencies/: clearpath_generator_gz
install/clearpath_generator_gz/share/ament_index/resource_index/parent_prefix_path/: clearpath_generator_gz
install/clearpath_generator_gz/share/clearpath_generator_gz/: local_setup.sh  package.dsv  package.ps1  package.sh
install/clearpath_generator_gz/share/clearpath_generator_gz/cmake/: clearpath_generator_gzConfig.cmake
install/clearpath_gz/share/ament_index/resource_index/package_run_dependencies/: clearpath_gz
install/clearpath_gz/share/ament_index/resource_index/parent_prefix_path/: clearpath_gz
install/clearpath_gz/share/clearpath_gz/: local_setup.sh  package.sh
install/clearpath_gz/share/clearpath_gz/cmake/: clearpath_gzConfig.cmake
install/clearpath_gz/share/clearpath_gz/launch/: simulation.launch.py
install/clearpath_gz/share/clearpath_gz/worlds/: generated_orchard.sdf
install/clearpath_simulator/share/ament_index/resource_index/parent_prefix_path/: clearpath_simulator
install/clearpath_simulator/share/clearpath_simulator/: local_setup.sh  package.sh
install/clearpath_simulator/share/clearpath_simulator/cmake/: clearpath_simulatorConfig.cmake
log/: latest_build
